[tool.poetry]
name = "stock_price_prediction"
version = "0.1.0"
description = ""
authors = ["Lievi Silva <lievi.silva@luizalabs.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
pandas-datareader = "^0.10.0"
matplotlib = "^3.5.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
